updated styles import

--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
   </head>
 
   <body>
-    <div class="my-element">
+    <section class="my-element">
         <p>I was in original document.</p>
-    </div>
+        <h2>Some caption</h2>
+    </section>
     
     <another-element>
         <p>test</p>
