--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <body>
     <section class="my-element">
-        <p>I was in original document.</p>
+        <p id="p-elem" class="green-p">I was in original document.</p>
         <h2>Some caption</h2>
     </section>
     
